syntax = "proto3";

package api.permission.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/permission/v1;permissionv1";

// 权限管理服务，负责角色定义、权限项管理及用户权限校验。
service Permission {
  // 创建新角色。
  rpc CreateRole(CreateRoleRequest) returns (Role);

  // 获取角色详情。
  rpc GetRole(GetRoleRequest) returns (Role);

  // 列出所有系统角色。
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  // 物理或逻辑删除角色。
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty);

  // 创建一个原子权限项（如 "order.delete"）。
  rpc CreatePermission(CreatePermissionRequest) returns (Permission);

  // 列出所有可用权限项。
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);

  // 将角色授予指定用户。
  rpc AssignRole(AssignRoleRequest) returns (google.protobuf.Empty);

  // 撤回用户的特定角色。
  rpc RevokeRole(RevokeRoleRequest) returns (google.protobuf.Empty);

  // 查询用户拥有的所有角色。
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);

  // 核心校验接口：检查用户是否具备特定权限。
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
}

// 角色实体。
message Role {
  // 唯一 ID。
  uint64 id = 1;
  // 角色名称（如 "管理员", "店长"）。
  string name = 2;
  // 角色描述。
  string description = 3;
  // 该角色绑定的权限列表。
  repeated Permission permissions = 4;
  // 创建时间。
  google.protobuf.Timestamp created_at = 5;
  // 更新时间。
  google.protobuf.Timestamp updated_at = 6;
}

// 权限项实体。
message Permission {
  // 唯一 ID。
  uint64 id = 1;
  // 权限代码标识符。
  string code = 2;
  // 权限项描述。
  string description = 3;
  // 创建时间。
  google.protobuf.Timestamp created_at = 4;
  // 更新时间。
  google.protobuf.Timestamp updated_at = 5;
}

// 角色创建请求。
message CreateRoleRequest {
  // 名称。
  string name = 1;
  // 描述。
  string description = 2;
  // 赋予的权限 ID 集合。
  repeated uint64 permission_ids = 3;
}

// 角色查询请求。
message GetRoleRequest {
  // 角色 ID。
  uint64 id = 1;
}

// 角色列表请求。
message ListRolesRequest {
  // 页码。
  int32 page = 1;
  // 每页数量。
  int32 page_size = 2;
}

// 角色列表响应。
message ListRolesResponse {
  // 角色序列。
  repeated Role roles = 1;
  // 总记录数。
  int64 total_count = 2;
}

// 角色删除请求。
message DeleteRoleRequest {
  // 角色 ID。
  uint64 id = 1;
}

// 权限项创建请求。
message CreatePermissionRequest {
  // 权限代码。
  string code = 1;
  // 权限描述。
  string description = 2;
}

// 权限项查询请求。
message ListPermissionsRequest {
  // 页码。
  int32 page = 1;
  // 每页数量。
  int32 page_size = 2;
}

// 权限项查询响应。
message ListPermissionsResponse {
  // 权限序列。
  repeated Permission permissions = 1;
  // 总记录数。
  int64 total_count = 2;
}

// 用户授权请求。
message AssignRoleRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 授予的角色 ID。
  uint64 role_id = 2;
}

// 权限撤销请求。
message RevokeRoleRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 撤销的角色 ID。
  uint64 role_id = 2;
}

// 用户角色查询请求。
message GetUserRolesRequest {
  // 用户 ID。
  uint64 user_id = 1;
}

// 用户角色列表响应。
message GetUserRolesResponse {
  // 拥有的角色列表。
  repeated Role roles = 1;
}

// 权限校验请求。
message CheckPermissionRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 需要检查的权限代码。
  string permission_code = 2;
}

// 校验结果响应。
message CheckPermissionResponse {
  // 是否允许访问。
  bool allowed = 1;
}
